# diffusers-rs

./: .gitignore  Cargo.toml  build.rs  inpaint.sh
examples/stable-diffusion-inpaint/: main.rs
examples/stable-diffusion-turbo/: main.rs
scripts/: download_weights_1.5.sh
src/pipelines/: mod.rs  stable_diffusion_turbo.rs
