[package]
name = "diffusers"
version = "0.3.1"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2021"
build = "build.rs"

description = "Rust implementation of the Diffusers library using Torch."
repository = "https://github.com/LaurentMazare/diffusers-rs"
keywords = ["pytorch", "deep-learning", "machine-learning", "diffusion", "transformers"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

exclude = [
    "media/*",
]

[dependencies]
anyhow = "*"
thiserror = "*"
regex = "*"
tch = "0.13"
torch-sys = { version = "0.13", features = ["download-libtorch"] }

clap = { version = "*", optional = true, features = ["derive"] }
image = { version = "*", optional = true }
imageproc = { version = "*", optional = true }

[[example]]
name = "stable-diffusion"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-img2img"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-inpaint"
required-features = ["clap"]

[[example]]
name = "controlnet"
required-features = ["clap", "imageproc"]

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
